Mise à jour quelques documentation